src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Header and Footer styles */
.bg-color-mark {
  @apply bg-teal-900 text-slate-100;
}

/* Navlink styles */
.navlink-active {
  @apply p-2 text-center flex-1 bg-teal-800 border-b-4;
}

.navlink-inactive {
  @apply p-2 text-center flex-1;
}

/* Form styles */
.container-input {
  @apply flex flex-col gap-1;
}

.form-input {
  @apply w-72 text-sm px-3 py-2 border rounded-md focus:ring-opacity-40 focus:outline-none focus:ring bg-gray-300 border-gray-400 focus:border-blue-500 focus:ring-blue-400;
}

.form-btn {
  @apply font-medium bg-teal-800 hover:bg-teal-700 text-white py-1.5 px-4 border border-teal-900 rounded;
}

@layer base {
  :root {
    /* colors to form */
    --COLOR-BG-FORM: #1e293b;
    --COLOR-BORDER-FORM: #334155;

    /* palette color  */
    --COLOR-BROWN: #3c322b;
    --COLOR-BROWN-LIGHT: #f4ebdb;
  }
}

@layer components {
  .active {
    border-bottom-width: 2px;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }

  .inactive {
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }

  .pending {
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }

  .label-form {
    font-size: 0.875rem;
    line-height: 1.25rem;
    font-weight: 500;
    color: white;
  }

  .input-form {
    font-size: 0.875rem;
    line-height: 1.25rem;
    padding: 0.625rem;
    --tw-bg-opacity: 1;
    background-color: rgb(51 65 85 / var(--tw-bg-opacity));
    border-width: 1px;
    --tw-border-opacity: 1;
    border-color: rgb(51 65 85 / var(--tw-border-opacity));
    --tw-placeholder-opacity: 1;
    color: rgb(148 163 184 / var(--tw-placeholder-opacity));
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity));
    border-radius: 0.5rem;
  }

  .button-submit-form {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity));
    font-weight: 500;
    border-radius: 0.5rem;
    font-size: 0.875rem;
    line-height: 1.25rem;
    padding: 0.875rem;
    text-align: center;
    --tw-bg-opacity: 1;
    background-color: rgb(49 96 41 / var(--tw-bg-opacity));
    --tw-bg-opacity: 1;
    background-color: rgb(39 81 33 / var(--tw-bg-opacity));
  }
}

